--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CliAndCollect"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".PageConnexion"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".PageInscription"/>
         <activity
             android:name=".FragmentHome"
             android:exported="true">
