--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activites.ActiviteCreationClient"/>
         <activity android:name=".fragments.GestionFragment"/>
         <activity android:name=".activites.ActiviteConnexion"/>
         <activity android:name=".activites.ActiviteInscription"/>
