Affichage liste client + Creation d'un client (#36)
* vue ajouter client

* Vue liste clients

* debut lien page détail

* feat (creation client)

* feat (client) : get clients from api

* feat : (client) create client

* controleur client

* fix (connexion) :

Utilisation d'un token inexistant depuis le dernier refactor.

* refactor : instanciation client

* fix: (manifest) fix déclaration activités (retrait fragments)

---------

Co-authored-by: NoahMiquel <120092720+NoahMiquel@users.noreply.github.com>
Co-authored-by: Loïc Faugières <loic.faugieres@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,26 +31,14 @@
         <activity
             android:name=".activites.ActiviteInscription"
             android:screenOrientation="portrait" />
+
+        <activity 
+            android:name=".activites.ActiviteCreationClient"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".fragments.GestionFragment"
             android:screenOrientation="portrait" />
         <!-- L'orientation sur l'activité GestionFragment est héritée dans les fragments -->
-        <activity
-            android:name=".fragments.FragmentAccueil"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".fragments.FragmentClients"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".fragments.FragmentParcours"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".fragments.FragmentItineraires"
-            android:exported="true">
-        </activity>
     </application>
 
 </manifest>
