--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            applicationVariants.all { variant ->
+                if (variant.buildType.name == "release") {
+                    variant.outputs.all { output ->
+                        outputFileName = "CliAndCollect.apk"
+                    }
+                }
+            }
         }
     }
     compileOptions {
