--- a/.github/workflows/build-deploy-apk.yml
+++ b/.github/workflows/build-deploy-apk.yml
@@ -28,7 +28,13 @@ jobs:
       - name: "Accorder la permission d'exécution pour gradlew"
         run: chmod +x gradlew
 
-      # 4. Construire l'APK avec Gradle
+      # 4. Ajouter le fichier config.properties
+      - name: "Ajouter le fichier config.properties"
+        run: |
+          mkdir -p app/src/main/assets
+          echo "BASE_URL=http://${{ vars.SSH_SERVER }}:8080/" > app/src/main/assets/config.properties
+
+      # 5. Construire l'APK avec Gradle
       - name: "Construire l'APK avec Gradle"
         run: ./gradlew assembleRelease  # Commande pour générer un fichier APK optimisé
 
