--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 # Local configuration file (sdk path, etc)
 local.properties
 config.properties
+CliAndCollect-Release-Key.jks
 
 # Log/OS Files
 *.log
