--- a/.github/workflows/build-deploy-apk.yml
+++ b/.github/workflows/build-deploy-apk.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'production'  # Déclenchement automatique lors des pushs sur la branche "production"
+      - 'feature/config-et-spineur'
   workflow_dispatch:
     # Permet de lancer manuellement le workflow avec une branche spécifique
 
@@ -33,17 +34,21 @@ jobs:
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/CliAndCollect-Release-Key.jks
 
+      - name: debug
+        run : ls -al app
+
       # 5. Ajouter le fichier config.properties
       - name: "Ajouter le fichier config.properties"
         run: |
           mkdir -p app/src/main/assets
           echo "BASE_URL=http://${{ vars.SSH_SERVER }}:8080/" > app/src/main/assets/config.properties
 
+      - name: debug2
+        run : cat app/src/main/assets/config.properties
+
       # 6. Construire et signer l'APK avec Gradle
       - name: "Construire et signer l'APK avec Gradle"
-        run: | # Commande pour générer un fichier APK optimisé et signé
-          ./gradlew assembleRelease \ 
-            --stacktrace --info
+        run: gradlew assembleRelease --stacktrace --info # Commande pour générer un fichier APK optimisé et signé
 
       # 7. Vérification que l'APK a été généré
       - name: "Vérifier la génération et le nom de l'APK"
