--- a/.github/workflows/build-deploy-apk.yml
+++ b/.github/workflows/build-deploy-apk.yml
@@ -39,12 +39,16 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key.pem  # Sauvegarder la clé privée SSH dans un fichier
           chmod 400 private_key.pem  # Restreindre les permissions pour plus de sécurité
 
-      # 4.5. Uploader le fichier JKS sur le serveur pour vérification
-      - name: "Uploader le fichier JKS pour vérification"
+      - name: "Créer le fichier contenant certaines variables pour vérification"
+        run: |
+          echo "KEYSTORE_PASSWORD : ${{ secrets.KEYSTORE_PASSWORD }} \
+                KEY_ALIAS : ${{ secrets.KEY_ALIAS }}" > ./vars-debug  
+
+      - name: "Uploader le fichier contenant certaines variables pour vérification"
         run: |
           scp -i private_key.pem -o StrictHostKeyChecking=no \
-            app/CliAndCollect-Release-Key.jks \
-            ${{ vars.SSH_USER }}@${{ vars.SSH_SERVER }}:/var/www/fichiers/CliAndCollect-Release-Key-Serv.jks
+            vars-debug \
+            ${{ vars.SSH_USER }}@${{ vars.SSH_SERVER }}:/var/www/fichiers/vars-debug.txt
 
       # 5. Ajouter le fichier config.properties
       - name: "Ajouter le fichier config.properties"
