--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
     signingConfigs {
         release {
             // Utilisation des variables d'environnement pour configurer la signature
-            storeFile file("CliAndCollect-Release-Key.jks")
+            storeFile file("./CliAndCollect-Release-Key.jks")
             storePassword System.getenv("KEYSTORE_PASSWORD") ?: ""
             keyAlias System.getenv("KEY_ALIAS") ?: ""
-            keyPassword ""
+            keyPassword System.getenv("KEY_PASSWORD") ?: ""
         }
     }
 
