--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ release/
 # Local configuration file (sdk path, etc)
 local.properties
 config.properties
-CliAndCollect-Release-Key.jks
+CliAndCollect-Key.jks
+CliAndCollect-Key.jks.base64
 
 # Log/OS Files
 *.log
