--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
     signingConfigs {
         release {
             // Utilisation des variables d'environnement pour configurer la signature
-            storeFile file("./CliAndCollect-Release-Key.jks")
+            storeFile file("./CliAndCollect-Key.jks")
             storePassword System.getenv("KEYSTORE_PASSWORD") ?: ""
             keyAlias System.getenv("KEY_ALIAS") ?: ""
-            keyPassword System.getenv("KEY_PASSWORD") ?: ""
+            keyPassword System.getenv("KEYSTORE_PASSWORD") ?: ""
         }
     }
 
@@ -48,7 +48,6 @@ android {
 }
 
 dependencies {
-
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
