--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Gradle files
 .gradle/
 build/
+release/
 
 # Local configuration file (sdk path, etc)
 local.properties
+config.properties
+CliAndCollect-Key.jks
+CliAndCollect-Key.jks.base64
 
 # Log/OS Files
 *.log
