feat: Gestion modification client et affichage détails du client + fix graddle version (#42)
* vue ajouter client

* Vue liste clients

* debut lien page détail

* feat (creation client)

* feat (client) : get clients from api

* feat : (client) create client

* controleur client

* fix (connexion) :

Utilisation d'un token inexistant depuis le dernier refactor.

* refactor : instanciation client

* fix: (manifest) fix déclaration activités (retrait fragments)

* Modification d'un client

* Modif client

* correctif nom

* fix: version graddle

* correction PR

---------

Co-authored-by: LucasDescriaud <lucas.descriaud@iut-rodez.fr>
Co-authored-by: Loïc Faugières <loic.faugieres@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         <activity
             android:name=".activites.ActiviteInscription"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".activites.ActiviteDetailClient"
+            android:screenOrientation="portrait" />
         <activity 
             android:name=".activites.ActiviteCreationClient"
             android:screenOrientation="portrait" />
